[gd_scene load_steps=7 format=3 uid="uid://d1ev02xatay5f"]

[ext_resource type="Script" path="res://Items/Item_Shop/item_shop.gd" id="1_0fope"]
[ext_resource type="Shader" uid="uid://b2b2amsr8cdws" path="res://Items/shadingMulti.tres" id="1_0tob4"]
[ext_resource type="Texture2D" uid="uid://cs72krvpoocqv" path="res://RogueFroggerAssets/RFAssets/Level/shoparrow.png" id="2_wgchv"]
[ext_resource type="Texture2D" uid="uid://ca660f23prfyc" path="res://RogueFroggerAssets/RFAssets/Level/speedometerglow.png" id="4_rsldd"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_d3wpi"]
shader = ExtResource("1_0tob4")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fkbcq"]
size = Vector2(233, 73.74)

[node name="ItemShop" type="Area2D"]
collision_layer = 0
script = ExtResource("1_0fope")

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2(0.999985, 1)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(35, 16, 123, 16, 123, -37, 195, -37, 195, 35, 123, 35, 123, 16, 111, 16, 111, 47, 207, 47, 207, -49, 111, -49, 111, -18, 47, -18, 47, -49, -49, -49, -49, 47, 47, 47, 47, 16, 35, 16, 35, 35, -37, 35, -37, -37, 35, -37)

[node name="arrow" type="Sprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_d3wpi")
position = Vector2(80, 0)
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_wgchv")

[node name="SpritePriceItem" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-1.70531e-13, 0)
scale = Vector2(1.2075, 1.2075)
texture = ExtResource("4_rsldd")
region_rect = Rect2(-80, -64, 736, 680)

[node name="MarginContainer" type="MarginContainer" parent="SpritePriceItem"]
anchors_preset = -1
anchor_left = 0.58
anchor_top = 0.627
anchor_right = 0.927
anchor_bottom = 0.814
offset_left = -69.6
offset_top = -58.24
offset_right = -71.24
offset_bottom = -57.68
grow_horizontal = 0
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="SpritePriceItem/MarginContainer"]
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="SpritePriceItem/MarginContainer"]
layout_direction = 3
layout_mode = 2
size_flags_vertical = 8
text = "x"

[node name="SpriteProductItem" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(160, 0)
scale = Vector2(1.2075, 1.2075)
texture = ExtResource("4_rsldd")
region_rect = Rect2(-80, -64, 736, 680)

[node name="MarginContainer" type="MarginContainer" parent="SpriteProductItem"]
anchors_preset = -1
anchor_left = 0.58
anchor_top = 0.627
anchor_right = 0.927
anchor_bottom = 0.814
offset_left = -69.6
offset_top = -58.24
offset_right = -71.24
offset_bottom = -57.68
grow_horizontal = 0
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="SpriteProductItem/MarginContainer"]
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="SpriteProductItem/MarginContainer"]
layout_direction = 3
layout_mode = 2
size_flags_vertical = 8
text = "x"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(80, 0)
shape = SubResource("RectangleShape2D_fkbcq")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
